# league_of_steel

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  installer_script.nsi
.github/: release-drafter.yml
.github/workflows/: rust.yml
game-lib/: Cargo.toml
game-lib/backend/dx9/: Cargo.toml
game-lib/backend/gdi/: Cargo.toml  build.rs
game-lib/backend/gdi/cpp/: PixelRect.hpp  ScreenAnalyzer.hpp
game-lib/backend/interface/: backend_interface.h
game-lib/backend/interface/src/: backend.rs  bindings.rs  lib.rs  process.rs
game-lib/backend/win_common/cpp/: ProcessHelper.cpp  bindings.cpp
game-lib/src/: game_events.rs  hw_trait.rs  lib.rs
games/: Cargo.toml  build.rs
games/backend_dx9/: Cargo.toml  build.rs
games/backend_dx9/cpp/: DxObj.hpp  PixelRect.hpp  ScreenAnalyzer.cpp  ScreenAnalyzer.hpp  bindings.cpp
games/backend_gdi/: Cargo.toml  build.rs
games/backend_gdi/cpp/: PixelRect.hpp  ScreenAnalyzer.cpp  ScreenAnalyzer.hpp  bindings.cpp
games/backend_interface/: Cargo.toml  backend_interface.h
games/backend_interface/src/: backend.rs  bindings.rs  lib.rs
games/backend_win/: build.rs
games/backend_win/cpp/inc/: bindings.h
games/backend_win/src/: lib.rs
games/backend_win_common/cpp/: ProcessHelper.cpp
games/benches/: with_backend.rs
games/fortnite/: Cargo.toml
games/fortnite/src/: fortnite.rs  lib.rs
games/lol/: Cargo.toml
games/lol/benches/: with_backend.rs
games/lol/src/: bars_position.rs  hud_rescale.rs  lol_game_analyzer.rs  lol_pixel_analyzer.rs  lollib.rs  spells.rs
games/src/: lib.rs  screen_elements.rs
games/src/fortnite/: mod.rs
games/src/lol/: bars_position.rs  hud_rescale.rs  lol_game_analyzer.rs  lol_pixel_analyzer.rs  lollib.rs  mod.rs  spells.rs
installer/: installer_script.nsi
interfaces/: Cargo.toml
interfaces/src/: game_events.rs  game_trait.rs  hw_error.rs  lib.rs
league_of_steel/: Cargo.toml  build.rs
league_of_steel/src/: game_connector.rs  games_connector.rs  hw_connector.rs  league_of_steel_config.rs  lib.rs  main.rs
lol-lib/: Cargo.toml  build.rs
lol-lib/backend/dx9/inc/: DxObj.hpp  LolLibDx9Error.hpp  PixelRect.hpp  PixelRow.hpp  ScreenAnalyzer.hpp
lol-lib/backend/dx9/src/: PixelRect.hpp  bindings.cpp
lol-lib/backend/interface/: backend_interface.h
lol-lib/backend_dx9/: Cargo.toml
lol-lib/backend_dx9/cpp/: PixelRect.hpp  ScreenAnalyzer.cpp  ScreenAnalyzer.hpp
lol-lib/backend_gdi/cpp/: PixelRect.hpp  ScreenAnalyzer.cpp  ScreenAnalyzer.hpp  bindings.cpp
lol-lib/backend_interface/: Cargo.toml  LolStats.h  backend_interface.h  build.rs  callSafely.hpp  lib.rs
lol-lib/backend_interface/src/: backend.rs  bindings.rs  lib.rs
lol-lib/backend_win/: Cargo.toml
lol-lib/backend_win/cpp/inc/: bindings.h
lol-lib/backend_win/cpp/src/: ProcessHelper.hpp  bindings.cpp
lol-lib/backend_win/src/: lib.rs
lol-lib/benches/: with_backend.rs
lol-lib/cpp/: fullgreen_bar.txt
lol-lib/cpp/inc/: BarsPosition.hpp  Color.hpp  DxObj.hpp  LolLib.hpp  LolLibError.hpp  LolStats.h  PixelRow.hpp  ProcessHelper.hpp  ScreenAnalyzer.hpp  bindings.h  callSafely.hpp
lol-lib/cpp/src/: BarsPosition.hpp  Color.hpp  LolLib.hpp  PixelRectAnalyzer.hpp  PixelRectWrapper.hpp  ProcessHelper.cpp  ScreenAnalyzerWrapper.hpp  bindings.cpp  callSafely.hpp
lol-lib/src/: config.rs  lib.rs  lolconfig.rs  lollib.rs
lol-lib/tests/: fullgreen_bar.txt
steel-lib/: Cargo.toml
steel-lib/src/: events.rs  lib.rs  steel_lib_error.rs  steelseries_engine_connector.rs
steel-lib/src/sse_events/: mod.rs  multiple_game_events.rs  register_game.rs  register_game_event.rs
steel-lib/src/sse_server_connector/: config.rs  mod.rs  server_connector.rs
steel-lib/src/steelseries_engine/: config.rs  mod.rs  server_connector.rs
testlib/: Cargo.toml  build.rs
testlib/app/: Cargo.toml
testlib/app/src/: game.cfg  main.rs
testlib/src/: image.rs  lib.rs  lol_config.rs  process.rs  resolution.rs  server.rs
testlib/ssestub/: Cargo.toml
testlib/ssestub/src/: main.rs
testlib/tests/: different_resolution.rs
