[package]
name = "game-lib"
version = "0.1.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_interface = { path = "backend/interface" }

[target.'cfg(windows)'.dependencies]
backend = { path = "backend/dx9" }