[package]
name = "games"
version = "0.8.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

[dependencies]
log = "0.4"
regex = "1.0"
game-lib = { path = "../game-lib"}
backend_interface = { path = "backend_interface" }

[target.'cfg(windows)'.dependencies]
backend = { path = "backend_dx9" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "with_backend"
harness = false