[package]
name = "league_of_steel"
version = "0.5.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"
default-run = "league_of_steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol-lib = {path = "../lol-lib"}
steel-lib = {path = "../steel-lib"}
log = "0.4"
simple-logging = "2.0"
