[package]
name = "league_of_steel"
version = "0.6.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"
default-run = "league_of_steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-lib ={path = "../game-lib"}
games = {path = "../games"}
steel-lib = {path = "../steel-lib"}
log = "0.4"
simple-logging = "2.0"

[dev-dependencies]
mockall = "0.7"