[package]
name = "league_of_steel"
version = "0.7.0-pre"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"
default-run = "league_of_steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces ={path = "../interfaces"}
steel-lib = {path = "../steel-lib"}
log = "0.4"
simple-logging = "2.0"

lol = {path = "../games/lol"}
fortnite = {path = "../games/fortnite"}

[dev-dependencies]
mockall = "0.7"