[package]
name = "lol-lib"
version = "0.7.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
log = "0.4"
libc = "0.2"
regex = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d9"] }
backend_interface = { path = "backend_interface" }
backend = { path = "backend_win" }
