[package]
name = "lol-lib"
version = "0.7.1"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

[dependencies]
log = "0.4"
regex = "1.0"

[target.'cfg(windows)'.dependencies]
backend_interface = { path = "backend_interface" }
backend_win = { path = "backend_win" }
backend = { path = "backend_dx9" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "with_backend"
harness = false