[package]
name = "steel-lib"
version = "0.7.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
http_req = "0.6"
log = "0.4"
interfaces = { path = "../interfaces"}

[dev-dependencies]
mockall = "0.7"
