[package]
name = "testlib"
version = "0.6.1"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

[dependencies]
tiny_http = "0.6"
regex = "1.3"

piston_window = "0.98"
app =  { path ="app"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "impl-default"] }