[package]
name = "fortnite"
version = "0.2.0"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

#[lib]
#crate-type = ["dylib"]
# %UserProfile%\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib\rustlib\x86_64-pc-windows-msvc\lib\std-bc2b04b7c9a44f97.dll

[dependencies]
log = "0.4"
interfaces = { path = "../../interfaces"}
game-lib = { path = "../../game-lib"}
