[package]
name = "lol"
version = "0.9.1"
authors = ["Krzysztof Grzywocz <kgrzywocz@wp.pl>"]
edition = "2018"

[dependencies]
log = "0.4"
regex = "1.0"
interfaces = { path = "../../interfaces"}
game-lib = { path = "../../game-lib"}

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "with_backend"
harness = false